@@ -1,3 +1,8 @@
+2010-10-23  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-keys.lisp (binding-substitute-modifier): Utility to
+	change modifiers after binding definition.
+
 2010-10-21  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* contrib/osd.lisp: New file: OSD (On Screen Display) for
